[workspace]
resolver = "2"
members = [
    "crates/rmq-protocol",
    "crates/rmq-storage",
    "crates/rmq-broker",
    "crates/rmq-server",
    "crates/rmq-auth",
    "crates/rmq-mgmt",
    "crates/rmq-mqtt",
    "crates/rmq-shovel",
    "crates/rmq-cluster",
    "crates/rmq-native",
    "crates/rmq-perf",
    "crates/rmq",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Protocol
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
memmap2 = "0.9"
parking_lot = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Testing
lapin = "2"

# Internal crates
rmq-protocol = { path = "crates/rmq-protocol" }
rmq-storage = { path = "crates/rmq-storage" }
rmq-broker = { path = "crates/rmq-broker" }
rmq-server = { path = "crates/rmq-server" }
rmq-auth = { path = "crates/rmq-auth" }
rmq-mgmt = { path = "crates/rmq-mgmt" }
rmq-mqtt = { path = "crates/rmq-mqtt" }
rmq-shovel = { path = "crates/rmq-shovel" }
rmq-cluster = { path = "crates/rmq-cluster" }
rmq-native = { path = "crates/rmq-native" }
