[package]
name = "rmq-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
bcrypt = "0.17"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
rand = "0.8"
regex = "1"

[dev-dependencies]
tempfile = "3"
