[package]
name = "rmq-broker"
version.workspace = true
edition.workspace = true

[dependencies]
rmq-protocol = { workspace = true }
rmq-storage = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
