[package]
name = "rmq-cluster"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
sha1 = "0.10"
lz4_flex = "0.11"

[dev-dependencies]
tempfile = "3"
