[package]
name = "rmq-mgmt"
version.workspace = true
edition.workspace = true

[dependencies]
rmq-auth = { workspace = true }
rmq-broker = { workspace = true }
rmq-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
