[package]
name = "rmq-mqtt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rmq-auth = { workspace = true }
rmq-broker = { workspace = true }
rmq-protocol = { workspace = true }
rmq-storage = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
