[package]
name = "rmq-native"
version.workspace = true
edition.workspace = true

[dependencies]
rmq-broker = { workspace = true }
rmq-storage = { workspace = true }
rmq-auth = { workspace = true }
rmq-protocol = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
