[package]
name = "rmq-perf"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rmq-perf"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
lapin = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-lite = "2"
rmq-native = { workspace = true }
bytes = { workspace = true }
