[package]
name = "rmq-shovel"
version.workspace = true
edition.workspace = true

[dependencies]
rmq-broker = { workspace = true }
rmq-protocol = { workspace = true }
rmq-storage = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
